# Vector-Heat-Method

./: CMakeLists.txt  README.md  build.sh  heat_vector.cpp  heat_vector.h  main.cpp  my_draw_buffer.h  shader.frag
cmake/: FindLIBIGL.cmake
report/: bib.bib  report.tex
src/: heat_vector.cpp  heat_vector.h  log.frag  main.cpp  my_draw_buffer.cpp  parallel.frag  shader.vert
